# h04-ecosystem

./: Cargo.toml  README.md  cliff.toml  deny.toml  test.rest
src/: lib.rs  main.rs
src/chat/: mod.rs
src/shortener/: controller.rs  entity.rs  error.rs  mod.rs  state.rs
