[package]
name = "rust-ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dashmap = "6.0.0"
futures = "0.3.30"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
nanoid = "0.4.0"
